feat(security): add role-based authorization with JWT
- Added 'role' field to User entity (ROLE_USER, ROLE_ADMIN)
- Updated JwtUtil to include role in JWT token and extract it
- Updated JwtFilter to set user roles in Spring Security context
- Updated SecurityConfig to restrict API access based on roles
- Implemented account ownership checks in service layer